<resources>
    <string name="app_name">nmedia</string>
    <string name="hellostring">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes</string>
    <string name="description_repost">Reposts</string>
    <string name="description_viewing">Viewing</string>
    <string name="description_post_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="text_edit">Edit message</string>
    <string name="chooser_repost">Share</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s published a new post:\n\n %2$s</string>
    <string name="error_loading">Loading error</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">No posts yet</string>
    <string name="network_error">Network error:</string>
    <string name="error_unknown">Unknown error</string>
    <string name="description_newer">New posts</string>
    <string name="newer_posts">New descriptions: </string>
    <string name="error_db">Db error</string>
</resources>
