<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toolsTop"
        tools:listitem="@layout/post_card"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,save"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        app:constraint_referenced_ids="image_edit,text_edit,cancel,group_barrier"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toStartOf="@+id/text_edit"
        app:layout_constraintTop_toBottomOf="@+id/group"
        app:srcCompat="@drawable/ic_edit_24"
        />

    <TextView
        android:id="@+id/text_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginBottom="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        android:text="@string/text_edit"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="@id/image_edit"
        app:layout_constraintTop_toBottomOf="@+id/group"
        />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/text_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_edit"
        app:layout_constraintTop_toTopOf="@+id/text_edit"
        app:srcCompat="@drawable/ic_cancel_48" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/group_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#818080"
        android:backgroundTint="#5E5B5B"
        android:visibility="visible"
        app:barrierDirection="top"
        app:constraint_referenced_tags="content,save"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_text"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:padding="@dimen/common_spacing"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@+id/group_barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        app:layout_constraintTop_toTopOf="@+id/group_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_save_48"/>

</androidx.constraintlayout.widget.ConstraintLayout>

